Release v1.0.0
-Ajouter parametres Login et Register Swagger
-Ajout CRUD Menu
