# backend/routes/menu_route.go
@@ -8,19 +8,16 @@ import (
 	"gorm.io/gorm"
 )
 
-// SetupMenuRoutes configure toutes les routes des menus
 func SetupMenuRoutes(router *gin.Engine, db *gorm.DB) {
-	// Initialiser le contrôleur
 	menuController := &controllers.MenuController{DB: db}
 
-	// Groupe de routes pour les menus
 	menuRoutes := router.Group("/api/menus")
 	{
 		menuRoutes.POST("", middlewares.AuthMiddleware(), middlewares.RequireRole("admin"), menuController.CreateMenu)
 		menuRoutes.GET("", menuController.GetAllMenus)
-		//menuRoutes.GET("/:id", middlewares.AuthMiddleware(), menuController.GetMenu)
-		//menuRoutes.PUT("/:id", middlewares.AuthMiddleware(), menuController.UpdateMenu)
-		//menuRoutes.DELETE("/:id", middlewares.AuthMiddleware(), middlewares.AdminOnly(), menuController.DeleteMenu)
-		//menuRoutes.DELETE("/softdelete/:id", middlewares.AuthMiddleware(), menuController.SoftDeleteMenu)
+		menuRoutes.GET("/:id", middlewares.AuthMiddleware(), menuController.GetMenuByID)
+		menuRoutes.PUT("/:id", middlewares.AuthMiddleware(), menuController.UpdateMenu)
+		menuRoutes.DELETE("/:id", middlewares.AuthMiddleware(), middlewares.RequireRole("admin"), menuController.DeleteMenu)
+		menuRoutes.DELETE("/softdelete/:id", middlewares.AuthMiddleware(), menuController.SoftDeleteMenu)
 	}
 }
